Se realizan modificaciones para que funcione con importaciones y exportaciones de tipo ES6

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,7 @@
 PORT=aqui se coloca el numero del puerto (solo numeros)
 PUBLIC_PATH=public
 
+// ESTO ES UNA PLANTILLA DE .env OPCIONAL PARA SUBIR A GITHUB COMO EJEMPLO DE COMO SE CREA EL .env
+// COMO ESTA NO SE ENCUENTRA RELACIONADA EN EL .gitignore, SE SUBE A GITHUB SIN PROBLEMAS.
+// DE ESTA MANERA SE CONSERVA EN SECRETO EL .env ORIGINAL PARA NO REVELAR DATOS IMPORTANTES.
 
